tss/tss-server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tss-server
    app.kubernetes.io/name: tss-server
  name: tss-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tss-server
      app.kubernetes.io/name: tss-server
  template:
    metadata:
      labels:
        app: tss-server
        app.kubernetes.io/name: tss-server
    spec:
      containers:
      - name: tss-server
        image: dev.registry.pivotal.io/tanzu-starter-service/tss-server:1.0.0-SNAPSHOT-2021-02-18T15-56-08Z
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 15
        resources:
          limits:
            cpu: 1
            memory: 768Mi
          requests:
            cpu: 500m
            memory: 768Mi
        volumeMounts:
        - mountPath: /app/runtime/config
          name: config
          readOnly: true
      imagePullSecrets:
      - name: tss-image-regcred
      volumes:
      - name: config
        configMap:
          name: tss-server
